--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "bootstrap": "^5.3.3",
     "flowbite-react": "^0.10.1",
+    "mdb-react-ui-kit": "^8.0.0",
     "nuxt-icon": "^1.0.0-beta.7",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
