--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "bootstrap": "^5.3.3",
     "flowbite-react": "^0.10.1",
+    "lucide-react": "^0.417.0",
     "mdb-react-ui-kit": "^8.0.0",
     "nuxt-icon": "^1.0.0-beta.7",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-medium-image-zoom": "^5.2.8",
     "react-router-dom": "^6.25.1",
     "styled-components": "^6.1.12"
   },
