--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^5.2.1",
     "react-medium-image-zoom": "^5.2.8",
     "react-router-dom": "^6.25.1",
+    "react-social-icons": "^6.17.0",
     "styled-components": "^6.1.12"
   },
   "devDependencies": {
