--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-locomotive-scroll": "^0.2.2",
     "react-medium-image-zoom": "^5.2.8",
     "react-router-dom": "^6.25.1",
     "react-social-icons": "^6.17.0",
