--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "flowbite-react": "^0.10.1",
+    "google-map-react": "^2.2.1",
     "lucide-react": "^0.417.0",
     "mdb-react-ui-kit": "^8.0.0",
     "nuxt-icon": "^1.0.0-beta.7",
