--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "nuxt-icon": "^1.0.0-beta.7",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.2.1",
+    "react-icons": "^5.3.0",
     "react-locomotive-scroll": "^0.2.2",
     "react-medium-image-zoom": "^5.2.8",
     "react-router-dom": "^6.25.1",
